// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Processor > processing > extends setting > errors for an empty string 1`] = `
[OptimalError: The following validations have failed for \`.boost.js\`:
  - Invalid field "extends". String cannot be empty.]
`;

exports[`Processor > processing > extends setting > errors for an empty string in an array 1`] = `
[OptimalError: The following validations have failed for \`.boost.js\`:
  - Invalid member "extends[1]". String cannot be empty.]
`;

exports[`Processor > processing > extends setting > errors for an invalid value 1`] = `
[OptimalError: The following validations have failed for \`.boost.js\`:
  - Invalid field "extends". Received number but value must be one of: string, array<string>.]
`;

exports[`Processor > processing > plugins setting > errors for an invalid option value 1`] = `
[OptimalError: The following validations have failed for \`.boost.js\`:
  - Invalid field "plugins.foo". Received number but value must be one of: boolean, object.]
`;

exports[`Processor > processing > plugins setting > errors for an invalid value 1`] = `
[OptimalError: The following validations have failed for \`.boost.js\`:
  - Invalid field "plugins". Received boolean but value must be one of: array<string | tuple<string, boolean | object>>, object<boolean | object>.]
`;

exports[`Processor > processing > validation > validates each config 1`] = `
[OptimalError: The following validations have failed for \`.boost.js\`:
  - Invalid field "debug". Must be a boolean, received number.]
`;

exports[`Processor processing extends setting errors for an empty string 1`] = `
"The following validations have failed for \`.boost.js\`:
  - Invalid field "extends". String cannot be empty."
`;

exports[`Processor processing extends setting errors for an empty string in an array 1`] = `
"The following validations have failed for \`.boost.js\`:
  - Invalid member "extends[1]". String cannot be empty."
`;

exports[`Processor processing extends setting errors for an invalid value 1`] = `
"The following validations have failed for \`.boost.js\`:
  - Invalid field "extends". Received number but value must be one of: string, array<string>."
`;

exports[`Processor processing plugins setting errors for an invalid option value 1`] = `
"The following validations have failed for \`.boost.js\`:
  - Invalid field "plugins.foo". Received number but value must be one of: boolean, object."
`;

exports[`Processor processing plugins setting errors for an invalid value 1`] = `
"The following validations have failed for \`.boost.js\`:
  - Invalid field "plugins". Received boolean but value must be one of: array<string | tuple<string, boolean | object>>, object<boolean | object>."
`;

exports[`Processor processing validation validates each config 1`] = `
"The following validations have failed for \`.boost.js\`:
  - Invalid field "debug". Must be a boolean, received number."
`;
